--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>JIWOO CHOI</title>
   </head>
+  <base href="/" />
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
